sfdx/nibs-sfdx/main/default/objects/Interaction__c/Interaction__c.object-meta.xml
<CustomObject>
    <label>Interaction</label>
    <nameField>
        <displayFormat>I-{00000000}</displayFormat>
        <label>Interaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>