sfdx/nibs-sfdx/main/default/objects/Interaction__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>