sfdx/nibs-sfdx/main/default/objects/Interaction__c/fields/Points__c.field-meta.xml
<CustomField>
    <fullName>Points__c</fullName>
    <label>Points</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>